--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-md-4 col-offset-1">
                       <h4>About</h4>
-                        <p>A not-so-holy guy trying to learn how to do things and then writing about it.</p>
+                        <p>Just a dude.</p>
                     </div>
                   </div>
               </div>
